# ComfyUI_ControlFreak

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
js/: index.js
js/controllers/: README.md  gamepad.js  midi.js
js/core/: commandExecutor.js  contextProvider.js  eventBus.js  learningManager.js  learningStateManager.js  mappingEngine.js  mappingManager.js  mappingTypes.js  persistenceManager.js  widgetUpdater.js  workflowIntegration.js
js/handlers/: controllerEventHandlers.js  messageHandlers.js
js/ui/: commandsList.js  contextMenu.js  controllerButton.js  controllerList.js  dialogs.js  mappingComponent.js  mappingList.js  mappingPanel.js  menuIntegration.js  notifications.js  widgetHighlighter.js
js/ui/styles/: branding.css  branding.js  contextMenu.css  contextMenu.js  controllerButton.css  controllerButton.js  dialog.css  dialog.js  index.js  mappingComponent.css  mappingComponent.js  nodeStyles.css  nodeStyles.js  notification.css  notification.js  panel.css  panel.js  theme.css  theme.js
