[project]
name = "controlfreak"
description = "Control Freak gives you physical control over your ComfyUI workflows by mapping MIDI controllers, gamepads, and other input devices to any node parameter or UI element. Transform your image generation experience with tactile, responsive control. Ever heard of 'flow state'?"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ryanontheinside/ComfyUI_ControlFreak"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_ControlFreak"
Icon = ""
